# ccc

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  ccc.pc.in  configure.in
ccc/: .gitignore  Makefile.am  cc-brush-color.c  cc-brush.c  cc-brush.h  cc-camera.c  cc-color.c  cc-d-rect.h  cc-gradient.c  cc-gradient.h  cc-item.c  cc-item.h  cc-line.c  cc-linear-gradient.c  cc-pixbuf.c  cc-radial-gradient.c  cc-radial-gradient.h  cc-rectangle.c  cc-shape.c  cc-shape.h  cc-text.c  cc-text.h  cc-utils.h  cc-view-cell-renderer.c  cc-view-widget.c  cc-view.c  cc-view.h  ccc.h
cdebug/: Makefile.am  cdebug.c
csharp/: .gitignore  Makefile.am  libccc.sources
demo/: .gitignore  Makefile.am  animation.c  camera.c  credits.c  crossing.c  crossing.h  demo-canvas.c  demo-canvas.h  demo-layers.h  demo-page.c  demo-page.h  demo-polygon.c  demo-polygon.h  demo-window.c  demo-window.h  fifteen-grid.c  fifteen-grid.h  fifteen-item.c  fifteen-item.h  fifteen.c  fifteen.h  gdb-ccc-demo  gradient.c  herzi-enum-combo.c  herzi-enum-combo.h  herzi-enum-model.c  herzi-enum-model.h  herzi-properties-group.c  herzi-properties-group.h  herzi-properties.c  herzi-properties.h  layers.c  line.c  line.h  main.c  main.h  pixbuf-demo.c  planets.c  planets.h  (+5 more)
doc/reference/: .gitignore  Makefile.am  ccc-bounds.xml  ccc-bugs.xml  ccc-custom-items.xml  ccc-docs.sgml  ccc-events.xml  ccc-focus-handling.xml  ccc-sections.txt  ccc-states.xml  ccc-zoom-and-scroll.xml  ccc.types
editor/: .gitignore  Makefile.am  ce-canvas-tree-model.c  ce-canvas-tree-model.h  ce-main.c  ce-window.c  ce-window.h  config.h  demo-canvas.c  demo-canvas.h  glib-helpers.h  gtk-helpers.c  gtk-helpers.h  herzi-main-window.c
macros/: herzi-cflags.m4  herzi-gprof.m4  herzi-ruby.m4
po/: .gitignore  ChangeLog  POTFILES.in  de.po
python/: .gitignore
ruby/: .gitignore  Makefile.am  ccc.c  ccc.rb
test/: .gitignore  Makefile.am  cc-test-view.c  cc-test-view.h  dummy-test.c  glib-helpers.h  gtk-helpers.c  gtk-helpers.h  m-ccc.c  s-item.c  s-item.h  s-text.c  s-text.h  t-item-crossing.c  t-item-distance.c  t-text-utf8-editing.c
